--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,11 @@
   border-radius: 2px;
 }
 
+.header {
+  display: flex;
+  justify-content: space-between;
+}
+
 .header h2 {
   margin: 0;
   color: #fff;
